--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@prisma/client": "^6.6.0",
+    "bcryptjs": "^3.0.2",
     "bookit": "file:",
     "date-fns": "^4.1.0",
+    "jsonwebtoken": "^9.0.2",
     "next": "15.2.3",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
