--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "bookit": "file:",
     "date-fns": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.1",
     "next": "15.2.3",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
