--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "bcryptjs": "^3.0.2",
     "bookit": "file:",
     "date-fns": "^4.1.0",
+    "html5-qrcode": "^2.3.8",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.1",
     "next": "15.2.3",
+    "next-auth": "^4.24.11",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "react-qr-code": "^2.0.15",
     "tw-animate-css": "^1.2.5",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
