--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "html5-qrcode": "^2.3.8",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.1",
+    "jsqr": "^1.4.0",
     "next": "15.2.3",
     "next-auth": "^4.24.11",
+    "pdfjs-dist": "^5.1.91",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
     "react-qr-code": "^2.0.15",
     "tw-animate-css": "^1.2.5",
     "zod": "^3.24.2",
