--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "^3.0.2",
     "bookit": "file:",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.8.0",
     "html5-qrcode": "^2.3.8",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.1",
@@ -26,6 +27,9 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-qr-code": "^2.0.15",
+    "react-tsparticles": "^2.12.2",
+    "tsparticles": "^3.8.1",
+    "tsparticles-slim": "^2.12.0",
     "tw-animate-css": "^1.2.5",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
