--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
   },
   "dependencies": {
     "@prisma/client": "^6.6.0",
+    "@tinymce/tinymce-react": "^6.1.0",
+    "@tiptap/extension-image": "^2.11.7",
+    "@tiptap/extension-link": "^2.11.7",
+    "@tiptap/react": "^2.11.7",
+    "@tiptap/starter-kit": "^2.11.7",
+    "@types/lodash.debounce": "^4.0.9",
     "bcryptjs": "^3.0.2",
     "bookit": "file:",
     "date-fns": "^4.1.0",
@@ -18,6 +24,7 @@
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.1",
     "jsqr": "^1.4.0",
+    "lodash.debounce": "^4.0.8",
     "next": "15.2.3",
     "next-auth": "^4.24.11",
     "pdfjs-dist": "^5.1.91",
