--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jspdf": "^3.0.1",
     "jsqr": "^1.4.0",
     "lodash.debounce": "^4.0.8",
+    "lucide-react": "^0.511.0",
     "next": "15.2.3",
     "next-auth": "^4.24.11",
     "pdfjs-dist": "^5.1.91",
