--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "bcryptjs": "^3.0.2",
     "bookit": "file:",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.12.1",
     "html5-qrcode": "^2.3.8",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.1",
     "jsqr": "^1.4.0",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "next": "15.2.3",
     "next-auth": "^4.24.11",
     "pdfjs-dist": "^5.1.91",
