--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/lodash.debounce": "^4.0.9",
     "bcryptjs": "^3.0.2",
     "bookit": "file:",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.8.0",
     "html5-qrcode": "^2.3.8",
@@ -26,6 +27,7 @@
     "jsqr": "^1.4.0",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.511.0",
+    "midtrans-client": "^1.4.2",
     "next": "15.2.3",
     "next-auth": "^4.24.11",
     "pdfjs-dist": "^5.1.91",
@@ -36,6 +38,7 @@
     "react-dropzone": "^14.3.8",
     "react-qr-code": "^2.0.15",
     "react-tsparticles": "^2.12.2",
+    "tailwind-merge": "^3.3.0",
     "tsparticles": "^3.8.1",
     "tsparticles-slim": "^2.12.0",
     "tw-animate-css": "^1.2.5",
