--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tiptap/react": "^2.11.7",
     "@tiptap/starter-kit": "^2.11.7",
     "@types/lodash.debounce": "^4.0.9",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "bookit": "file:",
     "clsx": "^2.1.1",
@@ -49,6 +50,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
